# django-project-template

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
__scripts__/: trust-caddy-cert-macos.sh  trust-caddy-cert-windows.cmd
keycloak/import/: local-realm.json  roles-mapper.json
src/core/: auth.py  form_enums.py  forms.py  middleware.py  settings.py  tests.py  urls.py  views.py
src/core/templatetags/: table_utils.py  utils.py
src/static/css/: main.css
src/static/js/: htmx-init.js  table.js  toast.js
src/templates/: base.html  detail.html  form.html  home.html  list.html
src/templates/components/: add_button.html  badge.html  download_button.html
src/templates/partials/: add_button.html  breadcrumbs.html  db_ping_result.html  download_button.html  link.html  navbar.html  ping.html  ping_result.html  sidebar_content.html  table.html  toast.html
src/templates/table/: README.md  index.html
src/templates/table/filters/: actions.html  select.html  text.html
src/templates/table/partials/: filter_badges.html  filters.html  pagination.html  sort.html  table.html  table_bottom.html  table_header.html  table_row.html  table_rows.html  table_top.html
src/templates/tags/: custom_tags.py
