[project]
name = "django-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.5",
    "django-htmx>=1.27.0",
    "gunicorn",
    "heroicons[django]>=2.14.0",
    "psycopg[binary]>=3.2.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
